clusters/home.axe.al/projects/pihole/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2025.08.0
        ports:
        - containerPort: 80
          name: web
        - containerPort: 53
          name: dns
      - name: cloudflared
        image: cloudflare/cloudflared:2025.8.1
        args:
        - "proxy-dns"
