clusters/home.axe.al/projects/pihole/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  serviceName: "pihole"
  replicas: 1
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:v5.3.4
        ports:
        - containerPort: 80
          name: web
        - containerPort: 53
          name: dns
        volumeMounts:
        - name: etc-pihole
          mountPath: "/etc/pihole"
        - name: etc-dnsmasq-d
          mountPath: "/etc/dnsmasq.d"
      - name: pihole-exporter
        image: ekofr/pihole-exporter:0.0.9
        ports:
        - containerPort: 9617
          name: metrics
      - name: cloudflared
        image: axeal/cloudflared:2020.11.11
        args:
        - "proxy-dns"
  volumeClaimTemplates:
  - metadata:
      name: etc-pihole
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: etc-dnsmasq-d
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 1Gi
