clusters/home.axe.al/projects/pihole/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
  - port: 80
    targetPort: 80
    name: pihole-admin
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp-lb
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  selector:
    app: pihole
  loadBalancerIP: 192.168.200.240
  ports:
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp-lb
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  selector:
    app: pihole
  loadBalancerIP: 192.168.200.240
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns
  type: LoadBalancer
